installdir = $(DATADIR)/neutrino/icons

# buttons
install_DATA = \
	0.png 1.png 2.png 3.png 4.png 5.png 6.png 7.png 8.png 9.png \
	btn_blue.png btn_yellow.png btn_green.png btn_red.png \
	down.png up.png right.png left.png \
	menu.png menu_small.png help.png help_small.png home.png \
	mute.png mute_small.png mute_zap_gray.png mute_zap_green.png \
	epg.png \
	softupdate_small.png \
	mounted.png volume.png not_mounted.png numericpad.png ok.png
	
# headers
install_DATA += \
	mainmenue.png settings.png timer.png features.png power.png info.png \
	video.png audio.png lock.png network.png recording.png colors.png lcd.png keybinding.png \
	multimedia.png \
	language.png \
	softupdate.png \
	games.png shell.png \
	error.png
	
# infoviewer
install_DATA += \
	rec.png ats.png \
	subt.png subt_gray.png \
	16_9.png 16_9_gray.png \
	ca2.png ca2_gray.png \
	dd.png dd_avail.png dd_gray.png \
	radiotextget.png radiotextoff.png radiotextwait.png \
	vtxt.png vtxt_gray.png \
	res_1980.png res_2160.png res_1280.png res_1440.png res_1080.png res_720.png res_704.png res_576.png \
	res_528.png res_544.png res_480.png res_382.png res_352.png res_288.png res_000.png \
	res_sd.png res_hd.png res_uhd.png
	
# channellist
install_DATA += \
	marker_scrambled.png marker_hd.png marker_uhd.png marker_dialog_ok.png marker_hidden.png
	
# filetypes
install_DATA += \
	movie.png mp3.png file.png folder.png	picture.png
	
# sliders
install_DATA += \
	slider_body.png slider_inactive.png \
	slider_alpha.png slider_blue.png slider_green.png slider_red.png
	
# country
install_DATA += \
	bayrisch.png ch-baslerdeutsch.png ch-berndeutsch.png deutsch.png dutch.png bosanski.png \
	ellinika.png english.png francais.png french.png hungarian.png italiano.png norsk.png \
	polski.png portugues.png romania.png russkij.png nederlands.png slovak.png suomi.png svenska.png arabic.png	

# radar
install_DATA += \
	radar.pal radar_red.pal \
	radar0.raw radar1.raw radar2.raw radar3.raw radar4.raw \
	radar5.raw radar6.raw radar7.raw radar8.raw radar9.raw

# screen
install_DATA += \
	border_lr.raw border_ul.raw

# background
install_DATA += \
	radiomode.jpg scan.jpg shutdown.jpg start.jpg mp3.jpg

# movieplayer
install_DATA += \
	btn_backward.png btn_play.png btn_pause.png btn_forward.png btn_stop.png
	
# movieplayer
install_DATA += \
	mp_play.png mp_pause.png mp_b-skip.png mp_f-skip.png mp_play_repeat_track.png mp_play_repeat_all.png

# webtv
install_DATA += \
	webtv_small.png webtv.png

# misc
install_DATA += \
	nopreview.jpg tmdb.png star-on.png star-off.png \
	hourglass0.png hourglass1.png hourglass2.png hourglass3.png hourglass4.png hourglass5.png hourglass6.png
	
# hints
# mainmenu
install_DATA += \
	hint_tvmode.png \
	hint_radiomode.png \
	hint_webtv.png \
	hint_avinputmode.png \
	hint_media.png \
	hint_settings.png \
	hint_service.png \
	hint_timers.png \
	hint_plugin.png \
	hint_shutdown.png \
	hint_dboxinfo.png

# settings
install_DATA += \
	hint_video.png \
	hint_audio.png \
	hint_protection.png \
	hint_network.png \
	hint_recording.png \
	hint_mb.png \
	hint_osd.png \
	hint_vfd.png \
	hint_keys.png \
	hint_aplay.png \
	hint_picview.png \
	hint_extended.png \
	hint_hdd.png

# osd settings
install_DATA += \
	hint_themes.png \
	hint_menucolors.png \
	hint_infobarcolors.png \
	hint_language.png \
	hint_font.png \
	hint_osdtiming.png \
	hint_lcd4linux.png \
	hint_alpha.png

# misc settings
install_DATA += \
	hint_streaminfo.png \
	hint_fileplay.png \
	hint_personalize.png \
	hint_psi.png

# service
install_DATA += \
	hint_scan.png \
	hint_reload.png \
	hint_bedit.png \
	hint_ci.png \
	hint_imageinfo.png \
	hint_swupdate.png

# power menu
install_DATA += \
	hint_sleeptimer.png \
	hint_restart.png \
	hint_standby.png \
	hint_reboot.png \
	hint_shutdown.png

# divers
install_DATA += \
	hint_default.png hint_xmltv.png
	


