installdir = $(DATADIR)/neutrino/icons

install_DATA = \
	audio.png \
	colors.png \
	error.png \
	features.png \
	games.png \
	keybinding.png \
	language.png \
	lcd.png \
	lock.png \
	mainmenue.png \
	multimedia.png \
	network.png \
	power.png \
	recording.png \
	settings.png \
	shell.png \
	softupdate.png \
	timer.png \
	video.png \
	webtv.png
	
