installdir = $(DATADIR)/neutrino/icons

install_DATA = \
	en.png \
	de.png \
	bayrisch.png ch-baslerdeutsch.png ch-berndeutsch.png dutch.png bosanski.png \
	ellinika.png francais.png french.png hungarian.png italiano.png norsk.png \
	polski.png portugues.png romania.png russkij.png nederlands.png slovak.png suomi.png svenska.png arabic.png
