SUBDIRS = background

installdir = $(CONFIGDIR)/skins/KravenHD

install_DATA = \
	mainsetup.lua \
	blue.lua \
	osdsetup.lua \
	red.lua \
	information.lua \
	mediaplayer.lua \
	powermenu.lua \
	service.lua \
	mainmenu.lua \
	miscsetup.lua \
	prev.png \
	KravenHD.config default.config \
	skin.xml
	



